Communication between ViewModels

--- a/FriendOrganizer.UI/View/NaviagtionView.xaml
+++ b/FriendOrganizer.UI/View/NaviagtionView.xaml
@@ -7,6 +7,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <ListView ItemsSource="{Binding Friends}"
+                  SelectedItem="{Binding SelectedFriend}"
                   DisplayMemberPath="DisplayMember" />
     </Grid>
 </UserControl>
