--- a/FriendOrganizer.UI/View/FriendDetailView.xaml
+++ b/FriendOrganizer.UI/View/FriendDetailView.xaml
@@ -8,13 +8,14 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Label Content="Firstname" Margin="10 10 10 0" />
@@ -31,6 +32,10 @@
         <TextBox Grid.Row="5"
                  Text="{Binding Friend.Email, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  Margin="10 0 10 10" />
+        <StackPanel Grid.Row="7" Orientation="Horizontal">
+            <Button Content="Save" Width="125" Margin="10"
+                    Command="{Binding SaveCommand}"/>
+        </StackPanel>
 
     </Grid>
 </UserControl>
