--- a/FriendOrganizer.UI/View/NaviagtionView.xaml
+++ b/FriendOrganizer.UI/View/NaviagtionView.xaml
@@ -6,8 +6,15 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ListView ItemsSource="{Binding Friends}"
-                  SelectedItem="{Binding SelectedFriend}"
-                  DisplayMemberPath="DisplayMember" />
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
+                      HorizontalScrollBarVisibility="Auto"/>
+        <ItemsControl ItemsSource="{Binding Friends}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding DisplayMember}"
+                            Command="{Binding OpenFriendDetailViewCommand}"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
 </UserControl>
