--- a/FriendOrganizer.UI/View/FriendDetailView.xaml
+++ b/FriendOrganizer.UI/View/FriendDetailView.xaml
@@ -35,16 +35,33 @@
                  Text="{Binding Friend.Email, TargetNullValue='', Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  Margin="10 0 10 10" />
 
-        
+
         <Label Grid.Row="6" Content="Favorite Language" Margin="10 0" />
-        <ComboBox Grid.Row="7" 
+        <ComboBox Grid.Row="7"
                   ItemsSource="{Binding ProgrammingLanguages}"
                   DisplayMemberPath="DisplayMember"
                   SelectedValuePath="Id"
                   SelectedValue="{Binding Friend.FavoriteLanguageId,Mode=TwoWay}"
                   Margin="10 0 10 10" />
 
-        
+        <DockPanel Grid.Row="8">
+            <StackPanel DockPanel.Dock="Right">
+                <Button Content="Add" Width="125" Margin="10" Command="{Binding AddPhoneNumberCommand}" />
+                <Button Content="Remove" Width="125" Margin="10" Command="{Binding RemovePhoneNumberCommand}" />
+            </StackPanel>
+            <DataGrid ItemsSource="{Binding PhoneNumbers}"
+                      SelectedItem="{Binding SelectedPhoneNumber, Mode=TwoWay}"
+                      AutoGenerateColumns="False" RowHeaderWidth="0">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Phone Numbers" Width="*" 
+                                        ElementStyle="{StaticResource DataGridColumStyle}"
+                                        EditingElementStyle="{StaticResource DataGridEditingColumStyle}"
+                                        Binding="{Binding Number,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+                </DataGrid.Columns>
+            </DataGrid>
+        </DockPanel>
+
+
         <StackPanel Grid.Row="9" Orientation="Horizontal">
             <Button Content="Save" Width="125" Margin="10"
                     Command="{Binding SaveCommand}" />
