--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -29,6 +29,6 @@
             </MenuItem>
         </Menu>
         <view:NaviagtionView Grid.Row="1" Grid.Column="0" DataContext="{Binding NavigationViewModel}" />
-        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding FriendDetailViewModel}" />
+        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding DetailViewModel}" />
     </Grid>
 </Window>
