--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -25,7 +25,8 @@
         </Grid.ColumnDefinitions>
         <Menu Grid.ColumnSpan="2" FontSize="20">
             <MenuItem Header="Create">
-                <MenuItem Header="New Friend" Command="{Binding CreateNewFriendCommand}" />
+                <MenuItem Header="New Friend" Command="{Binding CreateNewDetailCommand}"
+                          CommandParameter="{x:Type viewModel:FriendDetailViewModel}"/>
             </MenuItem>
         </Menu>
         <view:NaviagtionView Grid.Row="1" Grid.Column="0" DataContext="{Binding NavigationViewModel}" />
