--- a/FriendOrganizer.UI/View/MeetingDetailView.xaml
+++ b/FriendOrganizer.UI/View/MeetingDetailView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:FriendOrganizer.UI.View"
              xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:model="clr-namespace:FriendOrganizer.Model;assembly=FriendOrganizer.Model"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -27,6 +28,40 @@
 
         <Label Grid.Row="4" Content="End" Margin="10 0" />
         <toolkit:DateTimePicker Grid.Row="5" Value="{Binding Meeting.DateTo,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+        <Grid Grid.Row="6" Margin="10">
+            <Grid.Resources>
+                <DataTemplate DataType="{x:Type model:Friend}">
+                    <TextBlock>
+                        <Run Text="{Binding FirstName}" />
+                        <Run Text="{Binding LastName}" />
+                    </TextBlock>
+                </DataTemplate>
+            </Grid.Resources>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Label Content="Added Friend" />
+            <ListView Grid.Row="1" ItemsSource="{Binding AddedFriends}"
+                      SelectedItem="{Binding SelectedAddedFriend}" />
+            
+            <StackPanel Grid.Row="1" Grid.Column="1">
+                <Button Content="&lt;&lt;" Margin="10" Command="{Binding AddFriendCommand}"></Button>
+                <Button Content="&gt;&gt;" Margin="10" Command="{Binding RemoveFriendCommand}"></Button>
+            </StackPanel>
+            
+            <Label Grid.Column="2" Content="Avalible Friend" />
+            <ListView Grid.Row="1" Grid.Column="2" ItemsSource="{Binding AvalibleFriends}"
+                      SelectedItem="{Binding SelectedAvalibleFriends}" />
+            
+        </Grid>
 
         <StackPanel Grid.Row="7" Orientation="Horizontal">
             <Button Content="Save" Width="75" Margin="10" Command="{Binding SaveCommand}" />
