--- a/FriendOrganizer.UI/View/MeetingDetailView.xaml
+++ b/FriendOrganizer.UI/View/MeetingDetailView.xaml
@@ -59,7 +59,7 @@
             
             <Label Grid.Column="2" Content="Avalible Friend" />
             <ListView Grid.Row="1" Grid.Column="2" ItemsSource="{Binding AvalibleFriends}"
-                      SelectedItem="{Binding SelectedAvalibleFriends}" />
+                      SelectedItem="{Binding SelectedAvalibleFriend}" />
             
         </Grid>
 
